# code-editor

./: .env.signing.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
__tests__/: agent-session.test.ts  diff.test.ts  edit-parser.test.ts  gateway-protocol.test.ts  line-links.test.ts  skills-workflow.test.ts  utils.test.ts
app/: globals.css  layout.tsx  page.tsx  themes-extra.css
components/: activity-bar.tsx  agent-builder.tsx  agent-panel.tsx  caffeinate-toggle.tsx  chat-header.tsx  chat-home.tsx  code-editor.tsx  command-palette.tsx  details-panel.tsx  diff-viewer.tsx  editor-tabs.tsx  engine-panel.tsx  file-explorer.tsx  floating-panel.tsx  gateway-connect.tsx  gateway-terminal.tsx  git-panel.tsx  git-sidebar-addons.tsx  git-sidebar-panel.tsx  github-auth.tsx  inline-edit.tsx  knot-background.tsx  knot-logo.tsx  landing.tsx  markdown-preview.tsx  mcp-library.tsx  mobile-connect.tsx  mode-selector.tsx  permissions-toggle.tsx  plan-view.tsx  provider-selector.tsx  quick-open.tsx  resize-handle.tsx  session-presence.tsx  settings-panel.tsx  shortcuts-overlay.tsx  sidebar-plugin-slot.tsx  source-switcher.tsx  split-preview-chat.tsx  status-bar.tsx  (+3 more)
docs/: DESKTOP.md  (+4 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  local_fs.rs  terminal.rs
(+93 files in other folders)
