[package]
name = "app"
version = "1.11.0"
description = "Knot Code — AI-native desktop code editor by OpenKnot"
authors = ["OpenKnot"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
base64 = "0.22.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-localhost = "2"
tauri-plugin-http = "2.5.7"

# iOS-only dependencies
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.4"

# Desktop-only dependencies
[target.'cfg(not(target_os = "ios"))'.dependencies]
portable-pty = "0.8"
tauri-plugin-window-state = "2.4.1"
window-vibrancy = "0.7.1"
tauri-plugin-shell = "2.3.5"
keyring = "3"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true
